--- a/src/components/Contact/index.scss
+++ b/src/components/Contact/index.scss
@@ -10,44 +10,6 @@
     -moz-box-shadow: 0px 0px 44px -13px #bababa;
     box-shadow: 0px 0px 44px -13px #bababa;
 
-    // button {
-    //   padding: 7px 34px;
-    //   margin-top: 20px;
-    //   // margin-right: 1px;
-    //   background-color: rgba(255, 255, 255, 0);
-    //   border: 2px solid #000;
-    //   color: #000;
-    //   border-radius: 4px;
-    //   float: right;
-    //   cursor: pointer;
-    //   position: relative;
-    //   overflow: hidden;
-    //   font-weight: bold;
-    //   font-size: 16px;
-
-    //   &:after {
-    //     content: '';
-    //     position: absolute;
-    //     width: 111%;
-    //     background-color: #000;
-    //     height: 100%;
-    //     top: 0;
-    //     left: 0px;
-    //     transform: translateX(-110%);
-    //     transition: transform 0.2s;
-    //     z-index: -1;
-    //   }
-
-    //   &:hover {
-    //     color: #fff;
-    //   }
-
-    //   &:hover:after {
-    //     transform: translateX(0%);
-    //     transition: transform 0.2s;
-    //   }
-    // }
-
     .portfolio__contact-form {
       margin: 35px 0;
       position: relative;
@@ -93,10 +55,29 @@
         }
       }
     }
+    button {
+      background-color: #0000;
+      border: 0;
+      font-size: 16px;
+      padding: 10px 25px;
+      cursor: pointer;
+      transition: ease-in 0.1s;
+      border-radius: 6px;
+      font-weight: bold;
+      float: right;
+      &:hover {
+        color: #fff;
+        background-color: #000;
+        transition: ease-out 0.1s;
+        -webkit-box-shadow: 0px 0px 10px 8px #bababa;
+        -moz-box-shadow: 0px 0px 10px 8px #bababa;
+        box-shadow: 0px 0px 10px 8px #bababa;
+      }
+    }
   }
 
   // RIGHT
   .ui.image {
-    height: 480px;
+    height: 100%;
   }
 }
